Bug#32150, Replication fails with Falcon when 'Delete from table' is issued

Replication requires a fully populated record in the binlog in order to replicate deletes and some updates.
If the binlog is open, Falcon will return fully populated records to the server on DELETE and UPDATE operations.